--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -230,15 +230,15 @@ main {
 
 .nosotros-p {
     margin-bottom: 1rem;
-    line-height: 1.8; /* Aumenta el interlineado */
+    line-height: 1.8; 
     color:rgb(110, 106, 106);
-opacity: 0.9;
-.span-style{
-  font-weight: bold;
-  color:rgb(156, 151, 151);
-  border:  hidden;
-  border-bottom: white ;
-}
+    opacity: 0.9;
+    .span-style{
+      font-weight: bold;
+      color:rgb(156, 151, 151);
+      border:  hidden;
+      border-bottom: white ;
+    }
 }
 
 @media (max-width: 768px) {
@@ -253,10 +253,11 @@ opacity: 0.9;
 }
 
   /* Main pages/Productos */
-  .h4textoprodu:hover{
-color:rgb(94, 66, 66);
-opacity: 0.9;
-border-right: #2b2b2b;
+
+
+  .h6textos{
+    line-height: 2.0;
+    text-align: center;
   }
   .header-container {
     position: relative;
@@ -314,3 +315,54 @@ border-right: #2b2b2b;
     
   }
   
+
+
+  /*Formulario regristrarse*/
+  .container {
+    padding: 2rem;
+    background-color: #0f0f0f;
+    border-radius: 10px;
+    color: #ffffff;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+.form-label {
+    font-weight: bold;
+}
+
+.form-control {
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    padding: 0.75rem;
+}
+
+.btn-block {
+    width: 100%;
+    padding: 0.75rem;
+    font-size: 1.25rem;
+    display: block;
+    margin: 0 auto;
+}
+
+.btn-block a {
+    color: inherit;
+    text-decoration: none;
+    
+}
+
+.saborea {
+    margin-bottom: 2rem;
+}
+.form-control {
+  width: 80%;
+}
+
+button[type="submit"] {
+  display: block;
+  width: 50%;
+  margin: 10px auto;
+}
+
