--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -59,6 +59,12 @@ header {
     }
 
     .width-ico{
-      width: 2.2em;
+      width: 2.1em;
     }
+    .marginnav{
+      margin-right: 10rem;
+    }
+    .navbar-toggler-icon {
+      color: #ffffff;
+  }
   }/*Cierra header*/
