--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,4 +1,9 @@
 header {
+    .padingnav{
+        padding: 1.37rem;
+    }
+
+
   .navbar {
       background-image: linear-gradient(to bottom, #222222, #000000d8, #1f1e1e);
       opacity: 0.8;
@@ -52,7 +57,7 @@ header {
       color: #ffffff;
   }
   .marginr{
-    margin-left:7rem;
+    margin-left:3.5rem;
   }
   .marginr2{
 
