--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,9 @@ header {
         padding: 1.37rem;
     }
 
-
+.cursorpointer{
+    cursor: pointer;
+}
   .navbar {
       background-image: linear-gradient(to bottom, #222222, #000000d8, #1f1e1e);
       opacity: 0.8;
