--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -328,7 +328,11 @@ h2 {
 
   /* Main pages/Productos */
 
+  
+  .centrar{
+    justify-content: space-between;
 
+  }
   .h6textos{
     line-height: 2.0;
     text-align: center;
@@ -392,6 +396,8 @@ h2 {
 
 
   /*Formulario regristrarse*/
+  
+
   .container {
     padding: 2rem;
     background-color: #000000;
@@ -548,4 +554,11 @@ button[type="submit"] {
   transform: translateX(5px); 
 }
 
+}
+.contenedorBienvenida{
+  display: none;
+  width: 100%;
+  height: 200px; /* Incrementar la altura */
+  margin: 20px; /* Añadir padding si es necesario */
+  border: 2px solid #ccc; /* Añadir un borde para ver mejor el contenedor */
 }
